# api-assistencias

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  assistencias-api.service  backup_database.py  backup_plain.py  check_schema.py  config.py  debug_vps.py  enable_ssl.sh  fix_password.py  generate_insomnia.py  gunicorn_config.py  insomnia_collection.json  nginx-config  pyproject.toml  requirements.txt  reset_admin_password.py  restore_database.py  run.py  run_scheduler.bat  run_scheduler.sh  scheduler.py  set_production.py  setup_vps.sh
api/: __init__.py  commands.py  decorators.py
api/auth/: __init__.py  routes.py
api/models/: __init__.py  base.py  catalogo.py  chamado.py  chamado_anexo.py  chamado_lembrete.py  chamado_log.py  cliente.py  cliente_acesso.py  configuracao_operacional.py  execucao_dia.py  execucao_evento.py  historico_planejamento.py  orcamento.py  ordem_servico.py  planejamento_dia.py  planejamento_item.py  planejamento_semana.py  system_update.py  usuario.py
api/resources/: briefing.py  chamados.py  clientes.py  configuracoes.py  dashboard.py  (+12 more)
docs/: PROD_MIGRATION_PHASES.md  RELEASE_CHECKLIST.md  WSL_QUICKSTART.md
scraper/: solarz_sync_clientes.py  solarz_sync_usinas.py
scripts/: dev_run_api.sh  dev_test_pipeline.sh  dev_wsl_bootstrap.sh
tests/: Controle Geral (1).ods  DOCS_SOLARZ.md  apply_etl_db_setup.py  conftest.py  etl_fix_duplicates.py  etl_import_planilha_postgres.py  nginx-config  prepare_deployment.py  test_auth.py  test_briefing_endpoint.py  test_briefing_service.py  test_scheduling_engine.py  verify_import.py
(+57 files in other folders)
