# /pyproject.toml

[project]
name = "api-assistencias"
version = "0.1.0"
description = "API para sistema de gerenciamento de assistencias."
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = "."
markers = [
  "integration: tests that require PostgreSQL and migrations",
  "unit: pure unit tests without database state",
]
